--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,132 @@
-body {
-  background: url('../img/muttr-logo.png') center center no-repeat #444;
+body, html {
+  background: #eee;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+h1#logo {
+  background: url('../img/muttr-logo.png') center center no-repeat;
+  background-size: 48px 48px;
+  width: 56px;
+  height: 56px;
+  margin: auto;
+  text-indent: -9999px;
+}
+
+h2 {
+  color: #333;
+}
+
+h2.icon {
+  padding-left: 60px;
+}
+
+.server {
+  background: url('../img/server.png') left center no-repeat;
+}
+
+.network {
+  background: url('../img/network.png') left center no-repeat;
+}
+
+.wrapper {
+  max-width: 960px;
+  margin: auto;
+  clear: both;
+}
+
+section {
+  margin: 12px; 
+}
+
+.half {
+  float: left;
+  width: 50%;
+}
+
+table {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-bottom: none;
+  width: 100%;
+}
+
+td {
+  border: 1px solid #ddd; 
+  padding: 6px;
+}
+
+#search {
+  text-align: center;
+  margin: 12px 0;
+}
+
+input[type="text"] {
+  width: 300px;
+  padding: 12px 18px;
+  font-size: 18px;
+  border-radius: 3px;
+  border: none;
+}
+
+input[type="submit"] {
+  background: url('../img/search.png') center center no-repeat;
+  padding 12px 18px;
+  width: 48px;
+  border: none;
+  font-size: 18px;
+  margin-left: -48px;
+  text-indent: -9999px; 
+  opacity: 0.8;
+}
+
+input[type="submit"]:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+header {
+  border-bottom: 1px solid #999;
+  background: #fff;
+}
+
+footer {
+  margin-bottom: 24px;
+}
+
+footer .wrapper {
+  border-top: 1px solid #ddd;
+  padding-top: 24px;
+}
+
+footer ul {
+  list-style-type: none; 
+  margin: 0 auto;
+  padding: 0;
+  width: 400px;
+  text-align: center;
+}
+
+footer li {
+  display: inline;
+}
+
+footer li a {
+  color: #666;
+  text-decoration: none;
+}
+
+footer li a:hover {
+  cursor: pointer;
+  color: #000;
+}
+
+@media only screen and (max-width: 685px) {
+  
+  .half {
+    float: none;
+    width: 100%;
+  }
+
 }
