use github links in footer

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,8 +58,8 @@ body
     .wrapper
       ul
         li
-          a(href='https://gitlab.com/muttr/whitepaper') About |
+          a(href='https://github.com/muttr/whitepaper') About |
         li
-          a(href='https://gitlab.com/muttr/muttrpod')  Source |
+          a(href='https://github.com/muttr/muttrpod')  Source |
         li
           a(href='bitcoin:1DxvscvN4hKRxh8tLEBPLRyWtZPox7BMgR')  Donate
