update language of udp to tcp

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,7 @@ body
           tbody
             tr 
               td 
-                strong UDP Port
+                strong TCP Port
               td #{network.udpPort}
             tr
               td 
